<resources>
    <!--Main-->
    <string name="app_name">ClubDeportivoPrueba</string>
    <string name="textUsuario">Usuario</string>
    <string name="textPassword">Contraseña</string>
    <string name="textOlvideContrasena">Olvidé mi contraseña</string>
    <string name="textIniciarSesion">INICIAR SESIÓN</string>
    <string name="textCrearCuenta">Crea una cuenta</string>
    <string name="blpLogo">BLP Logo</string>
    <string name="clubLogo">Club Deportivo Logo</string>

    <!--Menu-->
    <string name="textRegistrarPersona">REGISTRAR PERSONA</string>
    <string name="textListaDeudores">LISTA DEUDORES</string>
    <string name="textEmitirCarnet">EMITIR CARNET</string>
    <string name="textCobrar">COBRAR</string>
    <string name="textCerrarSesion">CERRAR SESIÓN</string>
    <string name="textBienvenido">Bienvenido</string>
    <string name="opciones">Opciones</string>

    <!--Registrar-->
    <string name="TituloRegistrar">Registrar Persona</string>
    <string name="labelNombre">Nombre</string>
    <string name="labelApellido">Apellido</string>
    <string name="labelDNI">DNI</string>
    <string name="labelDireccion">Dirección</string>
    <string name="textNombre">Nombre requerido...</string>
    <string name="textApellido">Apellido requerido...</string>
    <string name="textDNI">DNI requerido</string>
    <string name="textDireccion">Dirección requerido...</string>
    <string name="textSocio">Socio</string>
    <string name="textAptoFisico">Apto Físico</string>
    <string name="textRegistrar">Registrar</string>

    <!--Emitir Carnet y Cobrar paso 1-->
    <string name="TituloEmitir">Emitir Carnet</string>
    <string name="textVerificarDNI">Ingrese el Nro de DNI</string>
    <string name="textVerificar">Verificar</string>
    <string name="subtDatosPersonales">Datos personales</string>
    <string name="datoNombre">NOMBRE:</string>
    <string name="datoApellido">APELLIDO:</string>
    <string name="datoDNI">DNI:</string>
    <string name="datoTipo">TIPO:</string>
    <string name="textEmitir">Emitir</string>

    <!--Cobrar paso 2-->
    <string name="labelMonto">Monto</string>
    <string name="textMonto">Monto a cobrar</string>
    <string name="subTitFPago">Forma de Pago</string>
    <string name="labelEfectivo">Pago en Efectivo</string>
    <string name="labelTarjeta">Pago con Tarjeta</string>
    <string name="labelcuota1">1 cuota</string>
    <string name="labelcuota3">3 cuotas</string>
    <string name="labelcuota6">6 cuotas</string>

    <string name="textSiguiente">Siguiente</string>

    <!--    Crear cuenta-->
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="botonVolver">Botón volver</string>
    <string name="crearCuentaDescripcion">Complete el formulario para crear una cuenta como empleado</string>
    <string name="hintDNI">Nro. de DNI</string>
    <string name="hintEmail">Correo electrónico</string>
    <string name="hintUsuario">Usuario</string>
    <string name="hintPass">Contraseña</string>
    <string name="hintRepeatPass">Repetir contraseña</string>
    <string name="cuentaCreada">Cuenta creada</string>
    <string name="cuentaCreadaDescripcion">Tu cuenta ha sido creada exitosamente. Ya puedes iniciar sesión.</string>
    <string name="irAinicio">Ir a inicio</string>

    <!--    Recuperar contraseña-->
    <string name="recuperarPass">Recuperar contraseña</string>"
    <string name="recuperarPassDescripcion">Ingrese su DNI para recuperar la contraseña</string>
    <string name="correoEnviado">Correo enviado</string>
    <string name="correoEnviadoDescripcion">Se ha enviado un email a su correo electrónico con las instrucciones para recuperar la contraseña</string>

    <!--    Lista deudores-->
    <string name="TituloCobrar">Cobrar</string>

    <string name="card1DNI">DNI: 123456789</string>
    <string name="card1Apellido">Apellido: Rodríguez</string>
    <string name="card1Nombre">Nombre: Gastón</string>
    <string name="card1Monto">Monto: $ 67.900,90</string>
    <string name="card1Vencimiento">Vencimiento: 12/09/2025</string>

    <string name="card2DNI">DNI: 45678912</string>
    <string name="card2Apellido">Apellido: Pugh</string>
    <string name="card2Nombre">Nombre: Roberto</string>
    <string name="card2Monto">Monto: $ 67.900,90</string>
    <string name="card2Vencimiento">Vencimiento: 12/09/2025</string>

    <string name="card3DNI">DNI: 78912345</string>
    <string name="card3Apellido">Apellido: Sanchez</string>
    <string name="card3Nombre">Nombre: Analía</string>
    <string name="card3Monto">Monto: $ 43.350,00</string>
    <string name="card3Vencimiento">Vencimiento: 12/09/2025</string>
    <string name="TituloLista">SOCIOS CON CUOTA VENCIDA</string>
    <string name="filtrarApellido">Filtrar por nombre, apellido o DNI...</string>

    <!-- Carnet emitido -->
    <string name="carnetEmitido">Carnet emitido</string>
    <string name="crearPDF">Crear PDF</string>
    <string name="enviarPorEmail">Enviar por email</string>
    <string name="enviarPorWhatsApp">Enviar por WhatsApp</string>
    <string name="compartirCarnet">COMPARTIR CARNET</string>
    <string name="carnetDescription">Carnet de socio del club deportivo</string>

    <!-- Comprobante pago -->
    <string name="comprobanteGenerado">Comprobante generado</string>
    <string name="logo_grupo">logo grupo</string>
    <string name="al_men_principal">al Menú Principal</string>
    <string name="bienvenido">Bienvenido!!!!</string>
    <string name="avatar">avatar</string>
    <string name="compartirComprobante">COMPARTIR COMPROBANTE</string>


</resources>