<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bdApp">


    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".CobrarActivity">

        <ImageButton
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@null"
            android:contentDescription="@string/botonVolver"
            android:padding="15dp"
            android:src="@drawable/ic_chevron_left" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:layout_gravity="center"
            android:contentDescription="@string/clubLogo"
            app:srcCompat="@drawable/logo2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/TituloCobrar"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold" />


        <!-- Input Verficar DNI -->
        <TextView
            android:id="@+id/textViewVerDNICobrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/labelDNI"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/etDNI"
            android:layout_width="310dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginBottom="56dp"
            android:autofillHints="dni"
            android:background="@drawable/borde_radius"
            android:hint="@string/textVerificarDNI"
            android:inputType="textPersonName"
            android:paddingHorizontal="10dp" />


        <Button
            android:id="@+id/btnVerificar"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="31dp"
            android:background="@drawable/celeste"
            android:text="@string/textVerificar"
            android:textSize="24sp"
            app:backgroundTint="@null" />


        <TextView
            android:id="@+id/textViewSubtDatosCobrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/subtDatosPersonales"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvDNI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/datoDNI"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvApellido"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/datoApellido"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/datoNombre"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/datoTipo"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSiguiente"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginBottom="31dp"
            android:background="@drawable/celeste"
            android:text="@string/textSiguiente"
            android:textSize="24sp"
            app:backgroundTint="@null" />

        <!--LogoGrupo-->
        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="160dp"
            android:contentDescription="@string/blpLogo"
            app:srcCompat="@drawable/logo_grupo" />

    </LinearLayout>

</ScrollView>