<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".CobrarActivity2"
    android:background="@color/bdApp">
<!--logo-->
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="76dp"
        android:layout_height="76dp"
        app:srcCompat="@drawable/logo2"
        android:layout_gravity="center"/>
<!--Titulo-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/TituloCobrar"
        android:textSize="32dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

<!-- Input Monto a cobrar -->
    <TextView
        android:id="@+id/textViewMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity=""
        android:paddingStart="70dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/labelMonto"
        android:textSize="18dp"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/editTextVerMonto"
        android:layout_width="310dp"
        android:layout_height="51dp"
        android:inputType="textPersonName"
        android:hint="@string/textMonto"
        android:layout_gravity="center"
        android:background="@drawable/borde_radius"
        android:layout_marginBottom="56dp"
        android:paddingStart="10dp" />

<!--subtitulo-->
    <TextView
        android:id="@+id/textViewSubtDatosCobrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/subTitFPago"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>



    <!--Grupo de botones tipo radio -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginBottom="20dp">

    <RadioGroup
        android:id="@+id/radioFP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioOpcionEfectivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelEfectivo"
            android:textSize="18dp"
            android:textColor="@color/black"/>

    </RadioGroup>

        <TextView
            android:id="@+id/textOpciontarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:paddingStart="30dp"
            android:text="@string/labelTarjeta"
            android:textSize="18dp"
            android:textColor="@color/black"/>

        <RadioGroup
            android:id="@+id/radioCantCuotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="70dp">

            <RadioButton
                android:id="@+id/radioOpcion1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelcuota1"
                android:layout_marginRight="60dp"/>

            <RadioButton
                android:id="@+id/radioOpcion2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelcuota3" />
            <RadioButton
                android:id="@+id/radioOpcion3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelcuota6" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnCobrar"
        app:backgroundTint="@null"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:background="@drawable/celeste"
        android:text="@string/TituloCobrar"
        android:textSize="24dp"
        android:layout_gravity="center"
        android:layout_marginBottom="72dp"
        />

    <!--LogoGrupo-->
    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="160dp"
        app:srcCompat="@drawable/logo_grupo" />

</LinearLayout>